Support more modes